--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,24 @@
 -r requirements.txt
 
+# gguf
+# accelerate
+
+pre-commit==4.5.*
+
 # linting
-isort==6.0.*
-black==25.1.*
+isort==7.0.*
+black==25.12.*
+mypy==1.19.*
+
+pytest==9.0.*
+
+# mypy-stubs
+types-python-dateutil==2.9.*
+
+types-pytz>=2025.2
+types-cachetools
+types-requests>=2.32.4.20250913
 
 # gguf
 # accelerate
+
