Update `Dockerfile_postgres` for PostgreSQL 18 and Debian Trixie support
- Parameterize PostgreSQL and Debian versions with build arguments.
- Upgrade `pgvector` version to v0.8.1.
- Refactor `apt` command to dynamically use the specified PostgreSQL version.

[skip actions]

--- a/Dockerfile_postgres
+++ b/Dockerfile_postgres
@@ -1,12 +1,22 @@
-FROM postgres:17-bookworm
+# there is even a pre-built postgres with pgvector available:
 # FROM pgvector/pgvector:pg16
+ARG postgres_version=18
+ARG debian_version=trixie
+
+FROM postgres:${postgres_version}-${debian_version}
+
+# need to repeat args (without defaults) in this stage
+ARG postgres_version
+ARG debian_version
+
 RUN localedef -i de_DE -c -f UTF-8 -A /usr/share/locale/locale.alias de_DE.UTF-8
 ENV LANG=de_DE.utf8
 
-RUN apt update && apt -y install git build-essential postgresql-server-dev-17 tini procps
+
+RUN apt update && apt -y install git build-essential postgresql-server-dev-${postgres_version} tini procps
 # RUN apt update && apt -y install git build-essential postgresql-server-dev-17 tini procps postgresql-16
 
-ARG pgvector_version=v.0.8.0
+ARG pgvector_version=v.0.8.1
 
 # https://github.com/pgvector/pgvector?tab=readme-ov-file#linux-and-mac
 RUN mkdir /tmp/pgvector_build  &&  \
