Update workflows to use Python 3.14 and refine Docker tagging and build args
- Bump Python version from 3.13 to 3.14 across all workflows.
- Update Docker image tags and build arguments to reflect the Python version change.
- Add pandas version 2.2.3 to build args for improved compatibility.

[skip actions]

--- a/.github/workflows/buildmultiarchandpush.yml
+++ b/.github/workflows/buildmultiarchandpush.yml
@@ -75,10 +75,11 @@ jobs:
           platforms: linux/amd64,linux/aarch64
           # github.event_name ist hier dann immer "workflow_run"
           push: ${{ github.event_name != 'pull_request' }}
-          tags: "xomoxcc/arley:latest,xomoxcc/arley:python-3.13-trixie"
+          tags: "xomoxcc/arley:latest,xomoxcc/arley:python-3.14-trixie"
           build-args: |
             buildtime=${{ steps.berlin_time.outputs.buildtime }}
-            python_version=3.13
+            python_version=3.14
+            pandas_version=2.2.3
             debian_version=trixie
 
           # buildtime="${{ github.event.repository.updated_at }}"
