--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ openparse==0.7.0
 # de-core-news-md
 # nltk
 
+llama-cloud-services==0.6.54
 llama-index==0.14.10
 llama-index-embeddings-ollama==0.8.4
 llama-index-llms-ollama==0.9.0
