Add `pyrefly` to `requirements-dev.txt` and update `.mypy.ini` module configuration
[skip actions]

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -18,7 +18,7 @@ exclude = (?x)(
     )
 #pycharm-args-default: --follow-imports silent --exclude \.pyi$
 
-[mypy-netatmostuff.lnetatmo]
+[mypy-SOMEPACKAGE.SOMEMODULE]
 check_untyped_defs = false
 disallow_untyped_defs = false
 # ignore_missing_imports = true
