Update Docker tags in build workflow to use `python-3.14-slim-trixie`
[skip actions]

--- a/.github/workflows/buildmultiarchandpush.yml
+++ b/.github/workflows/buildmultiarchandpush.yml
@@ -75,7 +75,7 @@ jobs:
           platforms: linux/amd64,linux/aarch64
           # github.event_name ist hier dann immer "workflow_run"
           push: ${{ github.event_name != 'pull_request' }}
-          tags: "xomoxcc/arley:latest,xomoxcc/arley:python-3.14-trixie"
+          tags: "xomoxcc/arley:latest,xomoxcc/arley:python-3.14-slim-trixie"
           build-args: |
             buildtime=${{ steps.berlin_time.outputs.buildtime }}
             python_version=3.14
