--- a/.github/workflows/buildmultiarchandpush.yml
+++ b/.github/workflows/buildmultiarchandpush.yml
@@ -72,7 +72,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64,linux/aarch64
+          platforms: linux/amd64,linux/arm64
           # github.event_name ist hier dann immer "workflow_run"
           push: ${{ github.event_name != 'pull_request' }}
           tags: "xomoxcc/arley:latest,xomoxcc/arley:python-3.14-slim-trixie"
@@ -80,7 +80,7 @@ jobs:
             buildtime=${{ steps.berlin_time.outputs.buildtime }}
             python_version=3.14
             pandas_version=2.2.3
-            debian_version=trixie
+            debian_version=slim-trixie
 
           # buildtime="${{ github.event.repository.updated_at }}"
           # tags: ${{ steps.<meta_id>.outputs.tags }}
