Refactor `build_postgres_localed.sh` and `Dockerfile_postgres` for enhanced modularity, error handling, and architecture-specific builds.
[skip actions]

--- a/postgrespgvector/Dockerfile_postgres
+++ b/postgrespgvector/Dockerfile_postgres
@@ -19,13 +19,19 @@ RUN apt update && apt -y install git build-essential postgresql-server-dev-${pos
 # RUN apt update && apt -y install git build-essential postgresql-server-dev-17 tini procps postgresql-16
 
 # https://github.com/pgvector/pgvector?tab=readme-ov-file#linux-and-mac
-# OPTFLAGS: Use x86-64-v3 (AVX2) for compatibility with older CPUs without AVX-512
-# Default 'make' auto-detects and may use AVX-512 which causes SIGILL on older CPUs
+# On x86_64: override OPTFLAGS to target x86-64-v3 (AVX2) instead of letting
+# pgvector's Makefile auto-detect, which may enable AVX-512 and cause SIGILL
+# on CPUs that only support AVX2.
+# On other architectures (e.g. arm64): use default OPTFLAGS (auto-detect is safe).
 RUN mkdir /tmp/pgvector_build  &&  \
     cd /tmp/pgvector_build && \
     git clone --branch $pgvector_version https://github.com/pgvector/pgvector.git &&  \
     cd pgvector &&  \
-    make OPTFLAGS="-march=x86-64-v3 -ftree-vectorize -fassociative-math -fno-signed-zeros -fno-trapping-math" && \
+    if [ "$(uname -m)" = "x86_64" ]; then \
+        make OPTFLAGS="-march=x86-64-v3 -ftree-vectorize -fassociative-math -fno-signed-zeros -fno-trapping-math"; \
+    else \
+        make; \
+    fi && \
     make install
 
 ARG buildtime=buildtime_is_undefined
